Move to the axiom/docker-tomcat base image